Fix text spacing

--- a/app/assets/stylesheets/home_stylesheet.css
+++ b/app/assets/stylesheets/home_stylesheet.css
@@ -92,7 +92,7 @@ line-height: 18px; }*/
 /*.Inquery-link-inline {
   display: inline;
 }*/
-
+/*
 .Login-link {
   display: inline;
   text-decoration: none;
@@ -101,13 +101,14 @@ line-height: 18px; }*/
   color: #FFFFFF;
   line-height: 19px;
 }
-
+*/
 .Login-link:link {
   font-family: HelveticaNeue-Medium;
   font-size: 16px;
   color: #FFFFFF;
   line-height: 19px;
   text-decoration: none;
+  padding-right: 18px;
 }
 
 .Login-link:visited {
@@ -116,11 +117,12 @@ line-height: 18px; }*/
   color: #FFFFFF;
   line-height: 19px;
   text-decoration: none;
+  padding-right: 18px;
 }
 
-.Login-link-inline {
+/*.Login-link-inline {
   display: inline;
-}
+}*/
 
 ./*TC_Logo {
   height: 66px;
@@ -235,6 +237,7 @@ line-height: 18px; }*/
   font-size: 26px;
   color: #444B52;
   line-height: 46px;
+  margin: auto 161px;
 }
 
 .link_style:link {
@@ -246,10 +249,10 @@ line-height: 18px; }*/
   display: block;
   font-family: HelveticaNeue-Medium;
   font-size: 20px;
-  margin: auto;
+  margin: 55px auto;
   text-decoration: none;
-  width: 220px;
-  padding: 15px 0;
+  width: 225px;
+  padding: 9px 0;
 }
 
 .link_style:visited {
@@ -363,10 +366,10 @@ line-height: 18px; }*/
   display: block;
   font: HelveticaNeue-Medium;
   font-size: 20px;
-  margin: auto;
+  margin: 35px auto;
   text-decoration: none;
   width: 328px;
-  padding: 15px 0;
+  padding: 12px 0;
 }
 
 .view_experiences_link_style:visited {
